# $Id: ChangeLog,v 1.796.2.146 2005/08/20 17:24:30 jstubbs Exp $

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  27 Sep 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
  Tweak to make EAPI work for existing vdb entries.

  24 Sep 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py, 
  bin/emerge:
  Final emerge metadata/cache cleanups; emerge --metadata no longer
  requires root (we run searches as non root, which can update the cache,
  so emerge --metadata as root is daft), and silenced auxdb exceptions
  when doing metadata transfers- preparation for when the default backend
  is changed.  If that weren't in, user would see > 20,0000 lines of 
  pointless cruft output.

  24 Sep 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py,
  +pym/portage_db_metadata.py, +pym/portage_db_flat_hash.py, 
  pym/portage_db_flat.py, pym/portage_const.py:
  EAPI awareness, and support for flat_hash metadata/cache.
  Later autodetects if the rsync cache is flat_hash, or flat_list, 
  and interprets accordingly.
  
  Flat_hash is intended to make it such that rsync cache breakages 
  for older portage versions no longer occur; the container format 
  can hold pretty much anything across EAPI versions.
  Additionally... EAPI is intended such that additions to the ebuild 
  env/helpers don't puke if you're running to old of a portage version; 
  it allows us to 'version' the ebuild env/funcs, and do masking dependant
  on that versioning.

  23 Sep 2005; Brian Harring <ferringb@gentoo.org> bin/emerge:
  cleanse_cache cleanups, should kill off all remaining issues 
  in bug #100444 .

  23 Sep 2005; Brian Harring <ferringb@gentoo.org> bin/repoman:
  bug #106544, glep31 enforcement checks.

  20 Sep 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py: