@@ -8,6 +8,10 @@
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
   27 Sep 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
+  No more portageq in the global scope.
+  Instant die.
+
+  27 Sep 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
   Tweak to make EAPI work for existing vdb entries.
 
   24 Sep 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py, 
